--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,6 @@
+---
 name: Check Ansible Debian buster
-description: Check your ansible role or playbook with the debian:buster docker container
+description: Check ansible role or playbook with the debian:buster docker container
 author: L3D <l3d@c3woc.de>
 
 inputs:
@@ -39,7 +40,16 @@ inputs:
       You can set them like this
       -> e.g. "foo: bar"
     required: false
-
+  tags:
+    description: |
+      If you are using tags and you want to pick which tags
+      you are going to check you can optionally define them here.
+    required: false
+  skiptags:
+    desctiption:
+      If you are using tags and you want explicit skip some of them,
+      you can define them here.
+    required: false
 runs:
   using: docker
   image: Dockerfile
@@ -49,6 +59,8 @@ runs:
     GROUP: ${{ inputs.group }}
     REQUIREMENTS: ${{ inputs.requirements }}
     VARS: ${{ inputs.vars }}
+    TAGS: ${{ inputs.tags }}
+    SKIPTAGS: ${{ inputs.skiptags }}
 branding:
-  icon: 'aperture'
+  icon: 'check-circle'
   color: 'green'
